<resources>
    <string name="app_name">Fini Ton Assiette</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Menu Principal</item>
        <item >Barcode Scanner</item>
        <item >Consulter une recette!</item>
        <item >Mon Compte</item>
        <item >Consulter mes aliments </item>
        <item >Non défini</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="aliment_déjà_choisi">Vous aviez déjà choisi cet aliment avant</string>
    <string name="Liste_des_aliments">"Liste des aliments : "</string>
    <string name="liste_aliments_remise_à_zéro">Liste aliments remise à zéro</string>
    <string name="trouver_une_recette">Trouver une Recette</string>
    <string name="scanner_un_nouveau_produit">Scanner un nouveau produit</string>
    <string name="produit_non_reconnu">Produit non reconnu</string>
    <string name="Céréales">Céréales</string>
    <string name="Farine">Farine</string>
    <string name="Fruit">Fruit</string>
    <string name="Poisson">Poisson</string>
    <string name="Categories">Catégories</string>
    <string name="concordances">Concordances</string>
    <string name="touchez_un_aliment_pour_l_ajouter_a_la_liste">Touchez un aliment pour l\'ajouter ou le supprimer de la liste</string>
    <string name="listealimentselectionnés">liste des aliments séléctionnés</string>
    <string name="aliments_selectionnes">Aliments séléctionnés</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Bleu</string>
    <string name="green">Vert</string>
    <string name="yellow">Jaune</string>
    <string name="orange">Orange</string>
    <string name="red">Rouge</string>
    <string name="txt_list_view_selected">Pour supprimer un élément de la liste, appuyez dessus pour le déselectionnez puis quittez la page ou cliquez sur trouver une recette.</string>
    <string name="tips">Tips</string>
    <string name="fermer">Fermer</string>
    <string name="choisir_categorie">Choisissez votre catégorie!</string>


</resources>
