<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/btn_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="140dp"
        android:minHeight="140dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/states_circle_orange"
        android:visibility="invisible"
        android:clickable="true"
        android:text="@string/orange"/>
    <ImageView
        android:id="@+id/btn_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="140dp"
        android:minHeight="140dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/circle_darker_green"
        android:visibility="invisible"
        android:clickable="true"
        android:text="@string/yellow"/>
    <ImageView
        android:id="@+id/btn_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="140dp"
        android:minHeight="140dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/states_circle_green"
        android:visibility="invisible"
        android:clickable="true"
        android:text="@string/green"/>
    <ImageView
        android:id="@+id/btn_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="140dp"
        android:minHeight="140dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/states_circle_red"
        android:visibility="invisible"
        android:clickable="true"
        android:text="@string/red"/>
    <ImageView
        android:id="@+id/btn_indigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="140dp"
        android:minHeight="140dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/states_circle_indigo"
        android:clickable="true"
        android:visibility="invisible"
        android:text="@string/indigo"/>

    <ImageView
        android:id="@+id/btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:minWidth="130dp"
        android:minHeight="130dp"
        android:clickable="true"
        android:src="@drawable/states_frigo_rouge"
        android:text="@string/blue"/>

</FrameLayout>